--- a/restaurants/templates/restaurant.html
+++ b/restaurants/templates/restaurant.html
@@ -16,7 +16,9 @@
       <a class="navbar-brand" href="#">
         <!-- logo -->
         <!-- <img src="/static/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top"  > -->
-         Group 5 Price - Comparison
+        {% for r in restaurant %}
+            {{r.name}}
+        {% endfor %}
       </a>
       <!--Navbar Button-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,21 +52,22 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
      <!--Bootstrap JS-->
-
+    <!-- Restaurant Info -->
      <!--Cards-->
      <div class="row" style="padding: 50px">
-      {% for restaurant in all_restaurant %}
+      {% for item in menu %}
         <div class="col-sm-4">
           <div class="card">
             <img src="/static/{{restaurant.image_name}}" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">{{restaurant.name}}</h5>
-              <p class="card-text"></p>
-              <a href="/restaurant/?id={{restaurant.name}}" class="btn btn-primary">Menu</a>
+              <h5 class="card-title">{{item.name}}</h5>
+              <p class="card-text">Doordash Price: {{item.doordash_price}}</p>
+              <p class="card-text">Uber Eats Price: {{item.uber_price}}</p>
             </div>
           </div>
         </div>
       {% endfor %}
+
       </div>
     <!--Cards-->
 </body>
