--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -12,34 +12,27 @@
 
 <!--Navbar-->
 <nav class="navbar navbar-light" style="background-color: rgb(232, 218, 68);">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <!-- logo -->
-        <!-- <img src="/static/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top"  > -->
-         Group 5 Price - Comparison
-      </a>
-      <!--Navbar Button-->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-      </div>
-      <!--Navbar Button-->
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{% url 'index' %}">
+      <!-- logo -->
+      <img src="/static/logo.png" alt="" width="60" height="48" class="d-inline-block align-text-top">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+        </li>
+        {% for restaurant in all_restaurant %}
+        <li class="nav-item">
+          <a class="nav-link" href="/restaurant/?id={{restaurant.name}}">{{restaurant.name}}</a>
+        </li>
+        {% endfor %}
+      </ul>
     </div>
+  </div>
 </nav>
 <!--Navbar-->
 
@@ -51,8 +44,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
      <!--Bootstrap JS-->
 
+   
+
      <!--Cards-->
      <div class="row" style="padding: 50px">
+      <h3 style="text-align: center; padding-bottom:10px;">Menus</h3>
       {% for restaurant in all_restaurant %}
         <div class="col-sm-4" style="padding-bottom: 20px;">
           <div class="card">
