--- a/restaurants/templates/restaurant.html
+++ b/restaurants/templates/restaurant.html
@@ -12,36 +12,23 @@
 
 <!--Navbar-->
 <nav class="navbar navbar-light" style="background-color: rgb(232, 218, 68);">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <!-- logo -->
-        <!-- <img src="/static/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top"  > -->
-        {% for r in restaurant %}
-            {{r.name}}
-        {% endfor %}
-      </a>
-      <!--Navbar Button-->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-      </div>
-      <!--Navbar Button-->
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{% url 'index' %}">
+      <!-- logo -->
+      <img src="/static/logo.png" alt="" width="60" height="48" class="d-inline-block align-text-top" >
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+    
+          <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+        </li>
+      </ul>
     </div>
+  </div>
 </nav>
 <!--Navbar-->
 
@@ -52,6 +39,35 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
      <!--Bootstrap JS-->
+
+     <!-- Banner Info -->
+     {% for restaurant in restaurant %}
+     <div class="card text-center">
+      <div class="card-header">
+        {{restaurant.address}}
+      </div>
+      <div class="container-md" style="padding: 20px;">
+        <h3 class="card-title">{{restaurant.name}}</h3>
+        <img src="/static/banners/{{restaurant.banner_name}}" style= "height: 250px; border-radius:55px; " class="card-img-top" alt="...">
+      </div>
+      <div class="card-body">
+        <div>
+        <p class="card-text" style="color:green;">Uber Delivery Time: {{restaurant.uber_delivery_time}}</p>
+        <p class="card-text" style="color:red;">Door Dash Delivery Time: {{restaurant.doordash_delivery_time}}</p>
+        </div>
+      </div>
+      <div class="card-footer text-muted">
+        {{restaurant.price_range}}
+        <br>
+        {{restaurant.cuisine}}
+        <br>
+       {{restaurant.phone}}
+      </div>
+    </div>
+    {% endfor %}
+    <!-- Banner Info -->
+ 
+
     <!-- Restaurant Info -->
      <!--Cards-->
 
