--- a/restaurants/templates/restaurant.html
+++ b/restaurants/templates/restaurant.html
@@ -76,7 +76,10 @@
       </div>
 
        <!-- Other Info -->
+
       <div class="card-footer text-muted">
+        <h3 style="color: black;">Information:</h3>
+        <hr>
       <div class="row" style="padding: 25px;">
         <div class="col-sm-4" style="padding-bottom: 10px;">
           <div class="card">
