--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -36,7 +36,6 @@
 </nav>
 <!--Navbar-->
 
-
 </head>
 <body>
     <!--Bootstrap JS-->
@@ -44,11 +43,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
      <!--Bootstrap JS-->
 
-   
 
      <!--Cards-->
      <div class="row" style="padding: 50px">
-      <h3 style="text-align: center; padding-bottom:10px;">Menus</h3>
+      <h3 style="text-align: center; padding-bottom:10px;">Restaurants</h3>
       {% for restaurant in all_restaurant %}
         <div class="col-sm-4" style="padding-bottom: 20px;">
           <div class="card">
