--- a/restaurants/templates/restaurant.html
+++ b/restaurants/templates/restaurant.html
@@ -51,9 +51,9 @@
         <img src="/static/banners/{{restaurant.banner_name}}" style= "height: 250px; border-radius:55px; " class="card-img-top" alt="...">
       </div>
       <div class="card-body">
-        <div>
-        <p class="card-text" style="color:green;">Uber Delivery Time: {{restaurant.uber_delivery_time}}</p>
-        <p class="card-text" style="color:red;">Door Dash Delivery Time: {{restaurant.doordash_delivery_time}}</p>
+        <div class="container-sm" style="background-color: rgb(232, 218, 68);; border-radius:55px; padding: 5px;">
+          <p class="card-text" style="color:green;">Uber Delivery Time: {{restaurant.uber_delivery_time}}</p>
+          <p class="card-text" style="color:red;">Door Dash Delivery Time: {{restaurant.doordash_delivery_time}}</p>
         </div>
       </div>
       <div class="card-footer text-muted">
