--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -44,7 +44,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
      <!--Bootstrap JS-->
 
-   
+
 
      <!--Cards-->
      <div class="row" style="padding: 50px">
@@ -56,7 +56,7 @@
             <div class="card-body">
               <h5 class="card-title">{{restaurant.name}}</h5>
               <p class="card-text"></p>
-              <a href="/restaurant/?id={{restaurant.name}}" class="btn btn-primary">Menu</a>
+              <a href="/loading/?id={{restaurant.name}}" class="btn btn-primary">Menu</a>
             </div>
           </div>
         </div>
