--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -25,9 +25,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
         </li>
-        {% for restaurant in all_restaurant %}
+        {% for data in restaurant_rating_data %}
         <li class="nav-item">
-          <a class="nav-link" href="/restaurant/?id={{restaurant.name}}">{{restaurant.name}}</a>
+          <a class="nav-link" href="/restaurant/?id={{restaurant.name}}">{{data.restaurant.name}}</a>
         </li>
         {% endfor %}
       </ul>
@@ -44,24 +44,27 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
      <!--Bootstrap JS-->
 
-   
+
 
      <!--Cards-->
      <div class="row" style="padding: 50px">
-      <h3 style="text-align: center; padding-bottom:10px;">Menus</h3>
-      {% for restaurant in all_restaurant %}
-        <div class="col-sm-4" style="padding-bottom: 20px;">
+      <h3 style="text-align: center; padding-bottom:10px;">Restaurants</h3>
+      {% for data in restaurant_rating_data %}
+      <div class="col-sm-4" style="padding-bottom: 20px;">
           <div class="card">
             <img src="/static/restaurant/{{restaurant.image_name}}" style="width: 100%;" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">{{restaurant.name}}</h5>
-              <p class="card-text"></p>
+              <h5 class="card-title">{{data.restaurant.name}}</h5>
+              <p class="card-text"> Average Rating: {{ data.avg_rating }}</p>
               <a href="/restaurant/?id={{restaurant.name}}" class="btn btn-primary">Menu</a>
             </div>
           </div>
         </div>
       {% endfor %}
       </div>
+
+
     <!--Cards-->
 </body>
 </html>
+
