--- a/restaurants/templates/loading.html
+++ b/restaurants/templates/loading.html
@@ -1,7 +1,7 @@
 <head>
 <style>
 body {
-  background-color: #222;
+  background-color: rgb(0, 0, 0);
 }
 
 
@@ -91,7 +91,7 @@ body {
   -o-animation: loader 2s linear infinite;
 }
 
-@-webkit-keyframes loaders {
+@keyframes loaders {
   0% {
     -webkit-transform: rotate(0deg);
     -ms-transform: rotate(0deg);
