--- a/restaurants/templates/restaurant.html
+++ b/restaurants/templates/restaurant.html
@@ -52,7 +52,7 @@
       <!-- Name + Banner -->
       <div class="container-md" style="padding: 20px;">
         <h3 class="card-title">{{restaurant.name}}</h3>
-        <img src="/static/banners/{{restaurant.banner_name}}" style= "height: 250px; border-radius:55px; object-fit: cover; " class="card-img-top" alt="...">
+        <img src="/static/banners/{{restaurant.banner_name}}" style= "width: 100%; border-radius:55px;" class="card-img-top" alt="...">
       </div>
 
       <!-- Delivery Times -->
@@ -127,7 +127,7 @@
       {% for item in menu %}
       <div class="col-sm-4" style="padding-bottom: 20px;">
         <div class="card">
-          <img src="/static/fooditem/{{item.image_name}}" style= "width:100%;" class="card-img-top" alt="..." style="object-fit: cover;">
+          <img src="/static/fooditem/{{item.image_name}}" style= "width:100%;" class="card-img-top" alt="...">
           <hr>
           <div class="card-body">
             <h5 class="card-title">{{item.name}}</h5>
