Minor UI changes

--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -51,7 +51,7 @@
       {% for data in restaurant_rating_data %}
       <div class="col-sm-4" style="padding-bottom: 20px;">
           <div class="card">
-            <img src="/static/restaurant/{{data.restaurant.image_name}}" style="width: 100%;" class="card-img-top" alt="...">
+            <img src="/static/restaurant/{{data.restaurant.image_name}}" style="width: 100%; object-fit: cover; border-radius:5px;" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">{{data.restaurant.name}}</h5>
               <p class="card-text"> Average Rating: {{ data.avg_rating }}</p>
