--- a/restaurants/templates/restaurant.html
+++ b/restaurants/templates/restaurant.html
@@ -1,67 +1,80 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <!--Bootstrap CSS-->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-    <!--Bootstrap CSS-->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!--Bootstrap CSS-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
+  <!--Bootstrap CSS-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
+  <link rel="stylesheet" type="text/css" href="../static/styles/likes.css" />
 
+  <!--Bootstrap JS-->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+  <!--Bootstrap JS-->
 
-<!--Navbar-->
-<nav class="navbar navbar-light" style="background-color: rgb(232, 218, 68);">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'index' %}">
-      <!-- logo -->
-      <img src="/static/logo.png" alt="" width="60" height="48" class="d-inline-block align-text-top" >
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
+  <!--Navbar-->
+  <nav class="navbar navbar-light" style="background-color: rgb(232, 218, 68);">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="{% url 'index' %}">
+        <!-- logo -->
+        <img src="/static/logo.png" alt="" width="60" height="48" class="d-inline-block align-text-top">
+      </a>
 
-          <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
-        </li>
-      </ul>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
-<!--Navbar-->
-
-
+  </nav>
+  <!--Navbar-->
 </head>
+
 <body>
-    <!--Bootstrap JS-->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-     <!--Bootstrap JS-->
+  <!-- Banner Info -->
+  {% for restaurant in restaurant %}
+  <div class="card text-center">
+    <!-- Address -->
+    <div class="card-header">
+      {{restaurant.address}}
+    </div>
 
-     <!-- Banner Info -->
-     {% for restaurant in restaurant %}
-     <div class="card text-center">
-       <!-- Address -->
-      <div class="card-header">
-        {{restaurant.address}}
-      </div>
+    <!-- Name + Banner -->
+    <div class="container-md" style="padding: 20px;">
+      <h3 class="card-title">{{restaurant.name}}</h3>
+      <img src="/static/banners/{{restaurant.banner_name}}"
+        style="height: 250px; border-radius:55px; object-fit: cover; " class="card-img-top" alt="...">
+    </div>
 
-      <!-- Name + Banner -->
-      <div class="container-md" style="padding: 20px;">
-        <h3 class="card-title">{{restaurant.name}}</h3>
-        <img src="/static/banners/{{restaurant.banner_name}}" style= "height: 250px; border-radius:55px; object-fit: cover; " class="card-img-top" alt="...">
-      </div>
-
-      <!-- Delivery Times -->
-      <div class="row" style="padding: 50px;">
+    <!-- Delivery Times -->
+    <div class="row" style="padding: 50px;">
       <div class="col-sm-6" style="padding-bottom: 20px;">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Uber Delivery Time:</h5>
-            <h5 class="card-text"><u>{{restaurant.uber_delivery_time}}</u></h5>
+            {% if restaurant.uber_delivery_time < restaurant.doordash_delivery_time %}
+              <h5 style="color: green;" class ="card-title">Uber Delivery Time:</h5>
+              <h5 style="color: green;" class="card-text"><u>{{restaurant.uber_delivery_time}}</u></h5>
+            {% else %}
+              <h5 style="color: red;" class="card-title">Uber Delivery Time:</h5>
+              <h5 style="color: red;" class="card-text"><u>{{restaurant.uber_delivery_time}}</u></h5>
+            {% endif %}
           </div>
         </div>
       </div>
@@ -69,18 +82,23 @@
       <div class="col-sm-6" style="padding-bottom: 20px;">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">DoorDash Delivery Time:</h5>
-            <h5 class="card-text"><u>{{restaurant.doordash_delivery_time}}</u></h5>
+            {% if restaurant.uber_delivery_time > restaurant.doordash_delivery_time %}
+              <h5 style="color: green;" class="card-title">DoorDash Delivery Time:</h5>
+              <h5 style="color: green;" class="card-text"><u>{{restaurant.doordash_delivery_time}}</u></h5>
+            {% else %}
+              <h5 style="color: red;" class="card-title">DoorDash Delivery Time:</h5>
+              <h5 style="color: red;" class="card-text"><u>{{restaurant.doordash_delivery_time}}</u></h5>
+            {% endif %}
           </div>
         </div>
       </div>
-      </div>
+    </div>
 
-       <!-- Other Info -->
+    <!-- Other Info -->
 
-      <div class="card-footer text-muted">
-        <h3 style="color: black;">Information:</h3>
-        <hr>
+    <div class="card-footer text-muted">
+      <h3 style="color: black;">Information:</h3>
+      <hr>
       <div class="row" style="padding: 25px;">
         <div class="col-sm-4" style="padding-bottom: 10px;">
           <div class="card">
@@ -108,18 +126,18 @@
             </div>
           </div>
         </div>
-        </div>
       </div>
     </div>
-    {% endfor %}
-    <!-- Banner Info -->
+  </div>
+  {% endfor %}
+  <!-- Banner Info -->
 
 
-    <!-- Restaurant Info -->
-     <!--Cards-->
+  <!-- Restaurant Info -->
+  <!--Cards-->
 
-     <div class="row" style="padding: 50px;">
-      <h1>Menu</h2>
+  <div class="row" style="padding: 50px;">
+    <h1>Menu</h2>
       <hr>
       <br>
       <h2>All Items:</h2>
@@ -127,26 +145,44 @@
       {% for item in menu %}
       <div class="col-sm-4" style="padding-bottom: 20px;">
         <div class="card">
-          <img src="/static/fooditem/{{item.image_name}}" style= "width:100%;" class="card-img-top" alt="..." style="object-fit: cover;">
+          <img src="/static/fooditem/{{item.image_name}}" style="width:100%;" class="card-img-top" alt="..."
+            style="object-fit: cover;">
           <hr>
           <div class="card-body">
             <h5 class="card-title">{{item.name}}</h5>
-            <p class="card-text">Doordash Price: {{item.doordash_price}}</p>
-            <p class="card-text">Uber Eats Price: {{item.uber_price}}</p>
+            {% if item.uber_price < item.doordash_price %}
+              <p style = "color:red;" class="card-text">Doordash Price: {{item.doordash_price}}</p>
+              <p style = "color:green;" class="card-text">Uber Eats Price: {{item.uber_price}}</p>
+            {% else %}
+              <p style = "color:green;" class="card-text">Doordash Price: {{item.doordash_price}}</p>
+              <p style = "color:red;" class="card-text">Uber Eats Price: {{item.uber_price}}</p>
+            {% endif %}
           </div>
+
           <div class="card-footer d-flex align-items-end justify-content-end">
-            <button class="btn btn-outline-primary mr-2">
-              <i class="fas fa-thumbs-up"></i>
-            </button>
-            <button class="btn btn-outline-secondary">
-              <i class="fas fa-thumbs-down"></i>
-            </button>
+            {% for restaurant in restaurant %}
+            <form action="{% url 'like' item.id restaurant.name %}" method="post">
+              {% csrf_token %}
+              {% if user in item.likers.all %}
+              <button class="button button-like liked">
+                <i class="fa fa-heart"></i>
+                <span>Likes: {{ item.likes }} </span>
+              </button>
+              {% else %}
+              <button class="button button-like">
+                <i class="fa fa-heart"></i>
+                <span>Likes: {{ item.likes }} </span>
+              </button>
+              {% endif %}
+              {% endfor %}
+            </form>
           </div>
+
         </div>
       </div>
-    {% endfor %}
+      {% endfor %}
+  </div>
+  <!--Cards-->
 
-      </div>
-    <!--Cards-->
 </body>
 </html>
