--- a/restaurants/templates/restaurant.html
+++ b/restaurants/templates/restaurant.html
@@ -20,6 +20,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
     crossorigin="anonymous"></script>
+
   <!--Bootstrap JS-->
 
   <!--Navbar-->
@@ -43,48 +44,54 @@
         </ul>
       </div>
     </div>
-  </div>
-</nav>
-<!--Navbar-->
+    </div>
+  </nav>
+  <!--Navbar-->
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
 
 
 </head>
+
 <body style="font-family: 'Rubik', sans-serif;">
-    <!--Bootstrap JS-->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-     <!--Bootstrap JS-->
+  <!--Bootstrap JS-->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+  <!--Bootstrap JS-->
+
+  <!-- Name + Banner -->
+  {% for restaurant in restaurant %}
+  <div class="card text-center">
+    <!-- Address -->
+    <div class="card-header">
+      {{restaurant.address}}
+    </div>
 
     <!-- Name + Banner -->
-    {% for restaurant in restaurant %}
-    <div class="card text-center">
-      <!-- Address -->
-     <div class="card-header">
-       {{restaurant.address}}
-     </div>
+    <div class="container-md" style="padding: 20px; ">
+      <h3 class="card-title">{{restaurant.name}}</h3>
+      <img src="/static/banners/{{restaurant.banner_name}}"
+        style="width: 100%; height:200px; border-radius:55px; object-fit: cover;" class="card-img-top" alt="...">
+    </div>
 
-      <!-- Name + Banner -->
-      <div class="container-md" style="padding: 20px; ">
-        <h3 class="card-title">{{restaurant.name}}</h3>
-        <img src="/static/banners/{{restaurant.banner_name}}" style= "width: 100%; height:200px; border-radius:55px; object-fit: cover;" class="card-img-top" alt="...">
-      </div>
-
-      <!-- Delivery Times -->
-      <div class="row" style="padding: 50px;">
+    <!-- Delivery Times -->
+    <div class="row" style="padding: 50px;">
       <div class="col-sm-6" style="padding-bottom: 20px;">
         <div class="card">
           <div class="card-body">
-            {% if restaurant.uber_delivery_time < restaurant.doordash_delivery_time %}
-              <h5 style="color: green;" class ="card-title">Uber Delivery Time:</h5>
+            {% if restaurant.uber_delivery_time < restaurant.doordash_delivery_time %} <h5 style="color: green;"
+              class="card-title">Uber Delivery Time:</h5>
               <h5 style="color: green;" class="card-text"><u>{{restaurant.uber_delivery_time}}</u></h5>
-            {% else %}
+              {% else %}
               <h5 style="color: red;" class="card-title">Uber Delivery Time:</h5>
               <h5 style="color: red;" class="card-text"><u>{{restaurant.uber_delivery_time}}</u></h5>
-            {% endif %}
+              {% endif %}
           </div>
         </div>
       </div>
@@ -93,11 +100,11 @@
         <div class="card">
           <div class="card-body">
             {% if restaurant.uber_delivery_time > restaurant.doordash_delivery_time %}
-              <h5 style="color: green;" class="card-title">DoorDash Delivery Time:</h5>
-              <h5 style="color: green;" class="card-text"><u>{{restaurant.doordash_delivery_time}}</u></h5>
+            <h5 style="color: green;" class="card-title">DoorDash Delivery Time:</h5>
+            <h5 style="color: green;" class="card-text"><u>{{restaurant.doordash_delivery_time}}</u></h5>
             {% else %}
-              <h5 style="color: red;" class="card-title">DoorDash Delivery Time:</h5>
-              <h5 style="color: red;" class="card-text"><u>{{restaurant.doordash_delivery_time}}</u></h5>
+            <h5 style="color: red;" class="card-title">DoorDash Delivery Time:</h5>
+            <h5 style="color: red;" class="card-text"><u>{{restaurant.doordash_delivery_time}}</u></h5>
             {% endif %}
           </div>
         </div>
@@ -141,31 +148,54 @@
   </div>
   {% endfor %}
   <!-- Banner Info -->
-
-
   <!-- Restaurant Info -->
-  <!--Cards-->
 
-     <div class="row" style="padding: 50px; font-family: 'Rubik', sans-serif;">
-      <h1>Menu</h2>
+
+  <!--Cards-->
+  <div class="row" style="padding: 50px; font-family: 'Rubik', sans-serif;">
+    <h1>Menu</h2>
       <hr>
       <br>
+
+      <h2>Featured:</h2>
+      <hr>
+      {% for item in featured %}
+      <div class="col-sm-4" style="padding-bottom: 20px;">
+        <div class="card">
+          <img src="/static/fooditem/{{item.image_name}}" style="height: 300px; object-fit: cover;" class="card-img-top"
+            alt="...">
+
+          <div class="card-body">
+            <h5 class="card-title">{{item.name}}</h5>
+            {% if item.uber_price < item.doordash_price %} <p style="color:red;" class="card-text">Doordash Price:
+              {{item.doordash_price}}</p>
+              <p style="color:green;" class="card-text">Uber Eats Price: {{item.uber_price}}</p>
+              {% else %}
+              <p style="color:green;" class="card-text">Doordash Price: {{item.doordash_price}}</p>
+              <p style="color:red;" class="card-text">Uber Eats Price: {{item.uber_price}}</p>
+              {% endif %}
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+
       <h2>All Items:</h2>
       <hr>
       {% for item in menu %}
       <div class="col-sm-4" style="padding-bottom: 20px;">
         <div class="card">
-          <img src="/static/fooditem/{{item.image_name}}" style= "height: 300px; object-fit: cover;" class="card-img-top" alt="...">
+          <img src="/static/fooditem/{{item.image_name}}" style="height: 300px; object-fit: cover;" class="card-img-top"
+            alt="...">
 
           <div class="card-body">
             <h5 class="card-title">{{item.name}}</h5>
-            {% if item.uber_price < item.doordash_price %}
-              <p style = "color:red;" class="card-text">Doordash Price: {{item.doordash_price}}</p>
-              <p style = "color:green;" class="card-text">Uber Eats Price: {{item.uber_price}}</p>
-            {% else %}
-              <p style = "color:green;" class="card-text">Doordash Price: {{item.doordash_price}}</p>
-              <p style = "color:red;" class="card-text">Uber Eats Price: {{item.uber_price}}</p>
-            {% endif %}
+            {% if item.uber_price < item.doordash_price %} <p style="color:red;" class="card-text">Doordash Price:
+              {{item.doordash_price}}</p>
+              <p style="color:green;" class="card-text">Uber Eats Price: {{item.uber_price}}</p>
+              {% else %}
+              <p style="color:green;" class="card-text">Doordash Price: {{item.doordash_price}}</p>
+              <p style="color:red;" class="card-text">Uber Eats Price: {{item.uber_price}}</p>
+              {% endif %}
           </div>
 
           <div class="card-footer d-flex align-items-end justify-content-end">
@@ -194,4 +224,5 @@
   <!--Cards-->
 
 </body>
+
 </html>
