--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -1,68 +1,113 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-    <!--Bootstrap CSS-->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!--Bootstrap CSS-->
+  <!--Bootstrap CSS-->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <!--Bootstrap CSS-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
 
-
-<!--Navbar-->
-<nav class="navbar navbar-light" style="background-color: rgb(232, 218, 68);">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'index' %}">
-      <!-- logo -->
-      <img src="/static/logo.png" alt="" width="60" height="48" class="d-inline-block align-text-top">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
-        </li>
-        {% for data in restaurant_rating_data %}
-        <li class="nav-item">
-          <a class="nav-link" href="/restaurant/?id={{data.restaurant.name}}">{{data.restaurant.name}}</a>
-        </li>
-        {% endfor %}
-      </ul>
+  <!--Navbar-->
+  <nav class="navbar navbar-light" style="background-color: rgb(232, 218, 68);">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="{% url 'index' %}">
+        <!-- logo -->
+        <img src="/static/logo.png" alt="" width="60" height="48" class="d-inline-block align-text-top">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+          </li>
+          {% for data in restaurant_rating_data %}
+          <li class="nav-item">
+            <a class="nav-link" href="/restaurant/?id={{data.restaurant.name}}">{{data.restaurant.name}}</a>
+          </li>
+          {% endfor %}
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
-<!--Navbar-->
+  </nav>
+  <!--Navbar-->
 
 </head>
+
 <body>
-    <!--Bootstrap JS-->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-     <!--Bootstrap JS-->
+  <!--Bootstrap JS-->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+  <!--Bootstrap JS-->
 
 
 
-     <!--Cards-->
-     <div class="row" style="padding: 50px">
-      <h3 style="text-align: center; padding-bottom:10px;">Restaurants</h3>
-      {% for data in restaurant_rating_data %}
-      <div class="col-sm-4" style="padding-bottom: 20px;">
-          <div class="card">
-            <img src="/static/restaurant/{{data.restaurant.image_name}}" style="width: 100%; object-fit: cover; border-radius:5px;" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">{{data.restaurant.name}}</h5>
-              <p class="card-text"> Average Rating: {{ data.avg_rating }}</p>
-              <a href="/restaurant/?id={{data.restaurant.name}}" class="btn btn-primary">Menu</a>
-            </div>
-          </div>
+  <!--Cards-->
+  <div class="row" style="padding: 50px">
+    <h3 style="text-align: center; padding-bottom:10px;">Restaurants</h3>
+    {% for data in restaurant_rating_data %}
+    <div class="col-sm-4" style="padding-bottom: 20px;">
+      <div class="card">
+        <img src="/static/restaurant/{{data.restaurant.image_name}}"
+          style="width: 100%; object-fit: cover; border-radius:5px;" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">{{data.restaurant.name}}</h5>
+          <!-- <p class="card-text"> Average Rating: {{ data.avg_rating }}</p> -->
+          <p class="card-text">
+            {%if data.avg_rating is None%}
+              No Reviews
+            {% elif data.avg_rating is 1%}
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            {% elif data.avg_rating is 2%}
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            {% elif data.avg_rating is 3%}
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            {% elif data.avg_rating is 4%}
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            {% elif data.avg_rating is 5%}
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            {% endif %}
+          </p>
+          <a href="/restaurant/?id={{data.restaurant.name}}" class="btn btn-primary">Menu</a>
         </div>
-      {% endfor %}
       </div>
+    </div>
+    {% endfor %}
+  </div>
 
 
-    <!--Cards-->
+  <!--Cards-->
 </body>
+
 </html>
