--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -99,7 +99,7 @@
             <i style="color: gold" class="fa fa-star"></i>
             {% endif %}
           </p>
-          <a href="/restaurant/?id={{data.restaurant.name}}" class="btn btn-primary">Menu</a>
+          <a href="/loading/restaurant/?id={{data.restaurant.name}}" class="btn btn-primary">Menu</a>
         </div>
       </div>
     </div>
