--- a/restaurants/templates/loading.html
+++ b/restaurants/templates/loading.html
@@ -147,7 +147,7 @@ body {
 
 <script>
     function redirect() {
-    window.location.replace("{% url 'restaurants' %}?{{ request.GET.urlencode }}");
+    window.location.replace("{% url 'restaurant' %}?{{ request.GET.urlencode }}");
     }
     setTimeout(redirect, 3000); // 3 seconds
   </script>
